--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
         <script src="js/phaser.min.js"></script>
-        <script src="js/game.js"></script>
+        <script src="js/game.min.js"></script>
     </head>
     <body>
         <div id="content"></div>
