Updated web title and icon

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>Geometry Combat</title>
+        <link rel="icon" href="assets/phaser.png">
         <script src="js/phaser.min.js"></script>
         <script src="js/game.min.js"></script>
     </head>
